# project_mu

./: README.md
my_project_mu/: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
my_project_mu/src/bookings/: models.py  service.py  tests.py  urls.py  views.py
my_project_mu/src/bookings/migrations/: 0001_initial.py  0002_alter_booking_options_booking_created_at_and_more.py  0003_alter_booking_room_and_more.py
my_project_mu/src/config/: __init__.py  config.py  settings.py  urls.py
my_project_mu/src/hotels/: models.py  service.py  tests.py  urls.py  views.py
my_project_mu/src/hotels/migrations/: 0001_initial.py  0002_room.py  0003_delete_hotelroom_room_hotels_room_price_p_ddffaf_idx_and_more.py
