[tool.poetry]
name = "my-project-mu"
package-mode = false
version = "0.1.0"
description = "Django project"
authors = ["denis19091989@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=5.0,<6.0"
djangorestframework = "*"
psycopg2-binary = "*"
typing-extensions = ">=4.15.0,<5.0.0"
gunicorn = "^25.1.0"
pydantic-settings = "^2.13.1"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.1,<0.16.0"
mypy = ">=1.19.1,<2.0.0"
bandit = ">=1.9.3,<2.0.0"
radon = ">=6.0.1,<7.0.0"
pre-commit = ">=4.5.1,<5.0.0"
types-pymysql = "^1.1.0.20251220"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"src/config/settings.py" = ["E402"]
